# ChatDocument

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  RAGPipeline.ipynb  README.md  main.py  pyproject.toml  replit.nix  requirements.txt  sample.txt  test.py
components/: chat.py  upload.py
core/: embeddings.py  llm.py
data/sample_docs/: sample.csv  sample.docx  sample.md  sample.txt
data/vector_store/: chroma.sqlite3
notebook/: RAGPipeline.ipynb
utils/: helpers.py
