[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "docx2txt>=0.8",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.34",
    "langchain-ollama>=0.2.3",
    "pypdf>=5.3.0",
    "python-docx>=1.1.2",
    "streamlit>=1.42.0",
    "twilio>=9.4.4",
]
